fix scrollbar in chat (again)

--- a/client/app/src/styles/styles.css
+++ b/client/app/src/styles/styles.css
@@ -16,6 +16,6 @@
 }
 
 .scrollbar::-webkit-scrollbar-thumb {
-    background-color: #9EAEBF;
+    background-color: #6246ea;
     border-radius: 15px;
 }
