--- a/client/home/src/components/tailwind.css
+++ b/client/home/src/components/tailwind.css
@@ -4,7 +4,7 @@
 
 .scrollbar {
     scrollbar-width: thin;
-    scrollbar-color: #2b2c34 #f5f5f5;
+    scrollbar-color: #2b2c34 #ffffff;
 }
 
 .scrollbar::-webkit-scrollbar {
@@ -12,7 +12,7 @@
 }
 
 .scrollbar::-webkit-scrollbar-track {
-    background-color: #f5f5f5;
+    background-color: #ffffff;
 }
 
 .scrollbar::-webkit-scrollbar-thumb {
